--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "clean": "gatsby clean"
   },
   "dependencies": {
+    "bootstrap": "^5.1.1",
     "gatsby": "^3.13.0",
     "gatsby-plugin-image": "^1.13.0",
     "gatsby-plugin-manifest": "^3.13.0",
@@ -23,8 +24,11 @@
     "gatsby-source-filesystem": "^3.13.0",
     "gatsby-source-wordpress": "^5.13.0",
     "gatsby-transformer-sharp": "^3.13.0",
+    "jquery": "^3.6.0",
     "react": "^17.0.1",
+    "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-icons": "^4.2.0"
   }
 }
