--- a/package.json
+++ b/package.json
@@ -16,19 +16,20 @@
   },
   "dependencies": {
     "bootstrap": "^5.1.1",
-    "gatsby": "^3.13.0",
-    "gatsby-plugin-image": "^1.13.0",
-    "gatsby-plugin-manifest": "^3.13.0",
-    "gatsby-plugin-react-helmet": "^4.13.0",
-    "gatsby-plugin-sharp": "^3.13.0",
-    "gatsby-source-filesystem": "^3.13.0",
-    "gatsby-source-wordpress": "^5.13.0",
-    "gatsby-transformer-sharp": "^3.13.0",
+    "gatsby": "^4.2.0",
+    "gatsby-plugin-image": "^2.2.0",
+    "gatsby-plugin-manifest": "^4.2.0",
+    "gatsby-plugin-react-helmet": "^5.2.0",
+    "gatsby-plugin-sharp": "^4.2.0",
+    "gatsby-source-filesystem": "^4.2.0",
+    "gatsby-source-wordpress": "^6.2.0",
+    "gatsby-transformer-sharp": "^4.2.0",
     "jquery": "^3.6.0",
     "react": "^17.0.1",
-    "react-bootstrap": "^2.0.0-beta.6",
     "react-dom": "^17.0.1",
     "react-helmet": "^6.1.0",
-    "react-icons": "^4.2.0"
+    "react-icons": "^4.2.0",
+    "react-mailchimp-subscribe": "^2.1.3",
+    "react-share": "^4.4.0"
   }
 }
